# generic_api

./: .gitignore  LICENSE  README.rst  endpoints.py  fields.py  mixins.py  retries_handler.py  setup.cfg
generic_api/: apps.py  errors_handler.py  mixins.py  session.py
generic_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
generic_api/generics/: endpoint.py  entity.py  errors_handler.py
generic_api/tests/: test_retries_handler.py  test_session.py
generic_api/tests/generics/: test_endpoint.py  test_entity.py
generics/: __init__.py  client.py  retries_handler.py  session.py
tests/: test_errors_handler.py  test_mixins.py
tests/generics/: generic_objects.py  test_client.py  test_errors_handler.py  test_retries_handler.py  test_session.py
