[metadata]
name = generic-api
version = 0.1
description = A Django app to request external API endpoints.
long_description = file: README.rst
author = Quentin MORTIER
author_email = quentin.mortier@guestready.com
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: